# tmux-wax

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  dot.tmux-wax-env  module.sh  tmux-wax.tmux
.github/: .typos.toml  dependabot.yaml
.github/workflows/: ci.yaml  linter.yaml  lock.yaml  no-response.yaml  release.yaml  typos.yaml
src/: main.rs
