[package]
name = "tmux-wax"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

[profile.release]
opt-level = "z"        # Optimize for binary size
lto = "fat"            # Link Time Optimization for performance
codegen-units = 1      # Single codegen unit for better optimization
panic = "abort"        # Avoid extra code for unwinding
strip = "symbols"      # Strip debug symbols to reduce binary size
overflow-checks = true # Enable runtime overflow checks for security
debug = false          # Disable debugging info in release builds
