[package]
name = "tmux-wax"
version = "0.1.1"
edition = "2021"
authors = ["Waldir Borba Junior <wborbajr@gmail.com>"]
description = "A Rust CLI that connects to a remote server via SSH and retrieves Docker container statistics"

[dependencies]
structopt = "0.3"
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
mockall = "0.13.0"
tempfile = "3.13.0"
assert_cmd = "2.0"
predicates = "3.1"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true

[features]
default = ["std", "ssh2/vendored-openssl"]
std = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-audit]
ignore = []
